fixed some minor layout issues on about page and footer

--- a/_sass/_nova-theme.scss
+++ b/_sass/_nova-theme.scss
@@ -487,6 +487,10 @@ header .dropdown-menu:before
   color: #6f6f6f;
   font-size: 14px;
 }
+#bottom
+{
+  p { font-size: 14px; }
+}
 #bottom h4
 {
   margin-bottom: 15px;
